# tonic2axum

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
docs/: per-field-type-replacement.md  type-replacement-roadmap.md
examples/simple/: Cargo.toml  README.md  build.rs
examples/simple/proto/hello/v1/: hello.proto
examples/simple/src/: main.rs
examples/streaming/: Cargo.toml  README.md  build.rs
examples/streaming/proto/hello/v1/: hello.proto
examples/streaming/src/: main.rs
examples/ws-streaming/: Cargo.toml  build.rs
examples/ws-streaming/proto/echo/v1/: echo.proto
examples/ws-streaming/src/: main.rs
src/: codegen.rs  http.rs  lib.rs  message.rs
tonic2axum/: Cargo.toml
tonic2axum-build/: Cargo.toml  README.md
tonic2axum-build/src/: builder.rs  codegen.rs  http.rs  lib.rs  message.rs  type_replace.rs
tonic2axum-build/src/codegen/: generator.rs  helpers.rs  mod.rs
tonic2axum-build/tests/: test_compile.rs
tonic2axum-build/tests/proto/test/v1/: test.proto
tonic2axum-build/tests/proto/test_replace/v1/: test_replace.proto
tonic2axum-build/tests/proto/test_ws/v1/: test_ws.proto
tonic2axum-build/tests/testdata/: test.v1.rs
tonic2axum-build/tests/testdata/openapi/: test.v1.rs
tonic2axum-build/tests/testdata/openapi_ws/: test_ws.v1.rs
tonic2axum-build/tests/testdata/replace_type/: test.v1.rs  test_replace.v1.rs
tonic2axum-build/tests/testdata/ws/: test_ws.v1.rs
tonic2axum-build/tests/testdata/ws_generic/: test_ws.v1.rs
tonic2axum/src/: lib.rs
tonic2axum/src/streaming/: client.rs  http.rs  mod.rs  ws.rs
tonic2axum/src/streaming/client/: http_client.rs  mod.rs  ws_client.rs
tonic2axum/src/streaming/server/: http_server.rs  mod.rs  ws_server.rs
