[package]
name = "tonic2axum-build"
version = "0.8.1"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A code generator that builds a REST/WebSocket reverse proxy (Axum) to gRPC services (Tonic)"
repository = "https://github.com/nu11ptr/tonic2axum/tree/main/tonic2axum-build"
documentation = "https://docs.rs/tonic2axum-build"
keywords = ["codegen", "grpc", "rest", "openapi", "websocket"]
categories = [
    "web-programming::http-server",
    "asynchronous",
    "network-programming",
]
readme = "README.md"
edition = "2024"

[features]
default = ["format"]
format = ["prost-build/format"]
cleanup-markdown = ["prost-build/cleanup-markdown"]

# Dependencies

[dependencies.flexstr]
version = "0.11"
default-features = false
features = ["std", "str"]

[dependencies.heck]
version = "0.5"
default-features = false

[dependencies.proc-macro2]
version = "1"
default-features = false

[dependencies.prost-build]
version = "0.14"
default-features = false

[dependencies.prost-reflect]
version = "0.16"
default-features = false

[dependencies.quote]
version = "1"
default-features = false

[dependencies.syn]
version = "2"
default-features = false
features = ["extra-traits"]

[dependencies.tonic-prost-build]
version = "0.14"
default-features = false

# Dev dependencies

[dev-dependencies.tempfile]
version = "3"
default-features = false
