[package]
name = "tonic2axum"
version = "0.2.0"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A code generator that builds a REST reverse proxy (Axum) to gRPC services (Tonic)"
repository = "https://github.com/nu11ptr/tonic2axum"
documentation = "https://docs.rs/tonic2axum"
keywords = ["codegen", "grpc", "rest", "openapi"]
categories = [
    "web-programming::http-server",
    "asynchronous",
    "network-programming",
]
readme = "README.md"
edition = "2024"

[features]
default = []
server-streaming = ["dep:axum-extra", "dep:futures-core"]
client-streaming = [
    "dep:axum-extra",
    "dep:futures-core",
    "dep:bytes",
    "dep:http-body",
    "tonic/server",
]

# Dependencies

[dependencies.axum]
version = "0.8"
default-features = false
features = ["json"]

[dependencies.axum-extra]
version = "0.12"
default-features = false
features = ["json-lines"]
optional = true

[dependencies.bytes]
version = "1"
default-features = false
optional = true

[dependencies.futures-core]
version = "0.3"
default-features = false
optional = true

[dependencies.http]
version = "1"
default-features = false

[dependencies.http-body]
version = "1"
default-features = false
optional = true

[dependencies.serde]
version = "1"
default-features = false

[dependencies.tonic]
version = "0.14"
default-features = false

# Dev dependencies

[dev-dependencies.async-stream]
version = "0.3"
default-features = false

[dev-dependencies.futures-util]
version = "0.3"
default-features = false

[dev-dependencies.serde_json]
version = "1"
default-features = false

[dev-dependencies.tokio]
version = "1"
default-features = false
features = ["rt", "macros"]
