[package]
name = "tonic2axum"
version = "0.2.0"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A code generator that builds a REST reverse proxy (Axum) to gRPC services (Tonic)"
repository = "https://github.com/nu11ptr/tonic2axum"
documentation = "https://docs.rs/tonic2axum"
keywords = ["codegen", "grpc", "rest", "openapi"]
categories = [
    "web-programming::http-server",
    "asynchronous",
    "network-programming",
]
readme = "README.md"
edition = "2024"

[features]
default = []

# Internal streaming features
_server-streaming = ["dep:futures-core"]
_client-streaming = [
    "dep:futures-core",
    "dep:bytes",
    "dep:http-body",
    "tonic/server",
]

# HTTP streaming features
http-streaming = ["http-client-streaming", "http-server-streaming"]
http-server-streaming = ["dep:axum-extra", "_server-streaming"]
http-client-streaming = ["dep:axum-extra", "_client-streaming"]

# WebSocket streaming features
ws-streaming = ["ws-client-streaming", "ws-server-streaming"]
ws-server-streaming = ["axum/ws", "_server-streaming"]
ws-client-streaming = [
    "axum/ws",
    "dep:futures-util",
    "dep:prost",
    "dep:serde_json",
    "dep:tracing",
    "_client-streaming",
]

# Dependencies

[dependencies.axum]
version = "0.8"
default-features = false
features = ["json"]

[dependencies.axum-extra]
version = "0.12"
default-features = false
features = ["json-lines"]
optional = true

[dependencies.bytes]
version = "1"
default-features = false
optional = true

[dependencies.futures-core]
version = "0.3"
default-features = false
optional = true

[dependencies.futures-util]
version = "0.3"
default-features = false
optional = true

[dependencies.http]
version = "1"
default-features = false

[dependencies.http-body]
version = "1"
default-features = false
optional = true

[dependencies.prost]
version = "0.14"
default-features = false
optional = true

[dependencies.serde]
version = "1"
default-features = false

[dependencies.serde_json]
version = "1"
default-features = false
optional = true

[dependencies.tonic]
version = "0.14"
default-features = false

[dependencies.tracing]
version = "0.1"
default-features = false
optional = true

# Dev dependencies

[dev-dependencies.async-stream]
version = "0.3"
default-features = false

[dev-dependencies.futures-util]
version = "0.3"
default-features = false

[dev-dependencies.serde_json]
version = "1"
default-features = false

[dev-dependencies.tokio]
version = "1"
default-features = false
features = ["rt", "macros"]
